--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>You have successfully deployed this website using AWS code services.</h2>
-    <p>For next steps, read the AWS CodePipeline Documentation.</p>
+    <h2>Olivier LARDIT est legacy !!!!</h2>
+    <p>AWS CodePipeline powered.</p>
   </div>
 </body>
 </html>
